Thu Dec 10 11:34:07 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/highlight.py: Use thread local storage correctly - make the
	  "stemmers" dict on demand in each thread.

Thu Dec 10 11:28:01 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/highlight.py: Cache the stemmers, and the results of the
	  stemmers, in thread local storage, to allow the cache to be
	  reused across uses of the Highlighter.  Based on a patch from
	  Bruno Rezende.

Wed Dec 09 13:09:35 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Add stats_checkatleast, to allow the
	  value of checkatleast when calculating stats to be set.

Wed Dec 09 12:05:31 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py,xappy/mset_search_results.py,
	  xappy/searchresults.py: Get the start and end rank from the
	  ordering instead of the stats; makes a lot more sense this way.

Wed Dec 09 03:24:52 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/utils.py: Add missing import of "math".

Wed Dec 09 03:20:51 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py,xappy/searchresults.py,
	  xappy/unittests/cached_searches.py: Refactor searchresults to use
	  the cache automatically if the query is appropriate.

Wed Dec 09 03:19:39 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py: Add a preliminary set of classes
	  for representing the results of reading the cache in a form
	  suitable for use in search results.

Wed Dec 09 03:18:39 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/query.py: Add support for storing the queryid for a cached
	  query in the Query object.

Wed Dec 09 01:04:03 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/doctests/searchconnection_doctest2.txt: Be less susceptible
	  to garbage collection timing.

Tue Dec 08 12:29:52 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/doctests/searchconnection_doctest2.txt,