@@ -1,3 +1,8 @@
+Mon Dec 14 11:41:35 GMT 2009  Richard Boulton <richard@tartarus.org>
+
+	* xappy/cachemanager/generic.py: Add storage of statistics and
+	  facets to the cache.
+
 Thu Dec 10 11:34:07 GMT 2009  Richard Boulton <richard@tartarus.org>
 
 	* xappy/highlight.py: Use thread local storage correctly - make the
